Made trivia easier for mobile devices (https://im-ded-but.mantaro-is.life/0e72896-3417.png)